--- a/style/summary_2.css
+++ b/style/summary_2.css
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     gap: 30px;
+    margin-bottom: 48px;
 }
 
 .summary-header2 div {
@@ -17,4 +18,53 @@
 
 .summary-header2 span {
     font-size: 27px;
+}
+
+.summary-card {
+    display: flex;
+    flex-direction: column;
+    width: 560px;
+}
+
+.card-row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.first-card-row {
+    display: flex;
+    align-items: center;
+    padding: 28px 60px;
+    gap: 18px;
+    border-radius: 30px;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
+}
+
+.first-card-row-logo{
+    width: 69px;
+    height: 69px;
+    background-color: rgba(42, 54, 71, 1);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.first-card-row-desc{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 57px;
+}
+
+.first-card-row-desc{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.first-card-row-desc span{
+    font-size: 20px;
 }
