--- a/style/summary_2.css
+++ b/style/summary_2.css
@@ -23,6 +23,7 @@
 .summary-card {
     display: flex;
     flex-direction: column;
+    gap: 30px;
     width: 560px;
 }
 
@@ -38,9 +39,10 @@
     gap: 18px;
     border-radius: 30px;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
+    background-color: rgba(255, 255, 255, 1);
 }
 
-.first-card-row-logo{
+.first-card-row-logo {
     width: 69px;
     height: 69px;
     background-color: rgba(42, 54, 71, 1);
@@ -50,7 +52,7 @@
     align-items: center;
 }
 
-.first-card-row-desc{
+.first-card-row-desc {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -58,13 +60,75 @@
     width: 57px;
 }
 
-.first-card-row-desc{
+.first-card-row-desc {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.first-card-row-desc span{
+.first-card-row-desc span {
     font-size: 20px;
+    color: rgba(42, 54, 71, 1);
+}
+
+.second-card-row {
+    display: flex;
+    align-items: center;
+    gap: 61px;
+    padding: 28px 60px;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
+    border-radius: 30px;
+    background-color: rgba(255, 255, 255, 1);
+}
+
+.second-card-row-desc {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 57px;
+}
+
+.second-card-row-desc span{
+    font-size: 16px;
+    color: rgba(42, 54, 71, 1);
+}
+
+.summary-category {
+    display: flex;
+    align-items: center;
+    gap: 18px;
+}
+
+.summary-category-logo {
+    width: 60px;
+    height: 60px;
+    background-color: rgba(255, 61, 0, 1);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.summary-card-divider{
+    width: 2px;
+    background-color: rgba(209, 209, 209, 1);
+    height: 100%;
+}
+
+.deadline-section{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    color: rgba(42, 54, 71, 1);
+}
+
+.deadline-section span{
+    font-size: 21px;
+    font-weight: 700;
+}
+
+.deadline-section p{
+    font-size: 16px;
 }
