added media querie for overlay responsive

--- a/style/summary_2.css
+++ b/style/summary_2.css
@@ -18,3 +18,9 @@
 .summary-header2 span {
     font-size: 27px;
 }
+
+@media (min-width: 900px) {
+  .animated-overlay {
+    display: none !important;
+  }
+}
