--- a/style/summary_2.css
+++ b/style/summary_2.css
@@ -1,7 +1,7 @@
 .summary-main {
     height: calc(100vh - 96px);
-    padding: 80px;
-    width: 1208px;
+    padding: 60px 80px;
+    max-width: 1208px;
 }
 
 .summary-header2 {
