--- a/style/summary_2.css
+++ b/style/summary_2.css
@@ -56,7 +56,7 @@
     background-color: rgba(42, 54, 71, 1);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     transform: scale(1.06);
-    color: white !important;
+    color: white;
 
     span {
         color: white;
@@ -66,16 +66,42 @@
         background-color: white;
     }
 
-    .first-card-row-logo svg path{
+    .first-card-row-logo svg path {
         fill: rgba(42, 54, 71, 1);
     }
 
-    .done-svg path{
+    .done-svg path {
         fill: white !important;
     }
 
-    .done-svg path{
+    .done-svg path {
         stroke: rgba(42, 54, 71, 1);
+    }
+}
+
+.first-card-row:active {
+    background-color: white;
+    transform: scale(1);
+    color: rgba(42, 54, 71, 1);
+
+    span {
+        color: rgba(42, 54, 71, 1);
+    }
+
+    .first-card-row-logo {
+        background-color: rgba(42, 54, 71, 1);
+    }
+
+    .first-card-row-logo svg path {
+        fill: white;
+    }
+
+    .done-svg path {
+        fill: rgba(42, 54, 71, 1) !important;
+    }
+
+    .done-svg path {
+        stroke: white;
     }
 }
 
@@ -139,6 +165,20 @@
 
     p {
         color: white;
+    }
+}
+
+.second-card-row:active {
+    background-color: white;
+    transform: scale(1);
+    color: rgba(42, 54, 71, 1);
+
+    span {
+        color: rgba(42, 54, 71, 1);
+    }
+
+    p {
+        color: rgba(42, 54, 71, 1);
     }
 }
 
@@ -213,10 +253,20 @@
     background-color: rgba(42, 54, 71, 1);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     transform: scale(1.06);
-    color: white !important;
+    color: white;
 
     span {
         color: white;
+    }
+}
+
+.third-card-row:active {
+    background-color: white;
+    transform: scale(1);
+    color: rgba(42, 54, 71, 1);
+
+    span {
+        color: rgba(42, 54, 71, 1);
     }
 }
 
