--- a/style/summary.css
+++ b/style/summary.css
@@ -293,3 +293,35 @@
 .greeting-section h3 {
     color: rgba(41, 171, 226, 1);
 }
+
+.animated-overlay {
+    position: absolute;
+    top: 96px;
+    left: 0;
+    width: 100%;
+    height: 80%;
+    display: none;
+    background-color: #f6f7f8;
+    justify-content: center;
+    align-items: center;
+}
+
+.animated-overlay-background {
+    z-index: 50;
+}
+
+.animated-overlay.show {
+    display: flex;
+}
+
+.animated-overlay .overlay-text {
+    text-align: center;
+    font-size: 40px;
+}
+
+.animated-overlay-text {
+    font-family: "Inter", serif;
+    font-size: 24px;
+    font-weight: 600;
+    color: #2a3647;
+}
