--- a/style/summary.css
+++ b/style/summary.css
@@ -283,6 +283,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-left: 50px;
 }
 
 .greeting-section span {
