smooth animation for resp menu for tasks

--- a/style/board.css
+++ b/style/board.css
@@ -376,6 +376,7 @@
     flex-direction: column;
     justify-content: space-between;
     color: white;
+    transition: 100ms;
 }
 
 .resp-menu-task>span {
