resp menu shows the names of movable categorys

--- a/style/board_resp.css
+++ b/style/board_resp.css
@@ -116,6 +116,10 @@
         display: block;
     }
 
+    .resp-menu-task{
+        display: flex;
+    }
+
     /* Wrapper + Fades only in mobile */
     .hs-wrap {
         position: relative;
