--- a/style/board.css
+++ b/style/board.css
@@ -262,6 +262,7 @@
 .task-desc {
     display: -webkit-box;
     -webkit-line-clamp: 3;
+    line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
     font-size: 16px;
