--- a/style/standart.css
+++ b/style/standart.css
@@ -85,6 +85,7 @@ h5 {
   display: flex;
   width: 100%;
   background-color: rgba(246, 247, 248, 1);
+  position: relative;
 }
 
 main {
@@ -108,6 +109,11 @@ a {
 }
 
 .o_0 {
+  opacity: 0;
+  z-index: -1;
+}
+
+.t_t_150{
   opacity: 0;
   transform: translateX(150%) !important;
 }
