--- a/style/summary.css
+++ b/style/summary.css
@@ -292,24 +292,21 @@
     color: rgba(42, 54, 71, 1);
 }
 
-.greeting-section h3 {
-    color: rgba(41, 171, 226, 1);
-}
-
 .animated-overlay {
-    position: absolute;
-    top: 96px;
-    left: 0;
     width: 100%;
-    height: 80%;
-    display: none;
+    height: 100%;
+    display: flex;
     background-color: #f6f7f8;
     justify-content: center;
     align-items: center;
+    transition: 1000ms;
 }
 
 .animated-overlay-background {
-    z-index: 50;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
 
 .animated-overlay.show {
@@ -326,4 +323,20 @@
     font-size: 24px;
     font-weight: 600;
     color: #2a3647;
+}
+
+.overlay-greeting-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.overlay-greeting-container h2{
+    color: rgba(41, 171, 226, 1);
+}
+
+.overlay-greeting-container span{
+    font-size: 36px;
+
 }
