changed max-height (subtask-dropdown)

--- a/style/add_task_v2.css
+++ b/style/add_task_v2.css
@@ -231,7 +231,7 @@
 
 .add-task-subtaks-dropdown ul {
     background-color: #FFFFFF;
-    z-index: 2;
+    /* z-index: 2; */
     display: flex;
     flex-direction: column;
     gap: 8px;
