--- a/style/add_task_v2.css
+++ b/style/add_task_v2.css
@@ -525,6 +525,10 @@
     color: #E60026;
 }
 
+.add-task-red-border {
+    border-color: #E60026; 
+}
+
 .add-task-form-input-placeholder-default::placeholder,
 .add-task-form-input-placeholder-black::placeholder {
     font-size: 20px;
