--- a/style/header.css
+++ b/style/header.css
@@ -179,6 +179,11 @@
     width: 40px;
     height: 40px;
   }
+
+  .profil-header>p {
+    color: #29ABE2;
+    font-weight: 700;
+  }
 }
 
 @media(max-width: 950px) {
