--- a/style/header.css
+++ b/style/header.css
@@ -44,6 +44,16 @@
   cursor: pointer;
 }
 
+.profil-header>p {
+    color: #29ABE2;
+    font-size: 20px;
+    font-weight: 700;
+  }
+
+  .profil-header:hover {
+    background-color: rgba(12, 46, 98, 0.12);
+  }
+
 /* Main header container - full width header with shadow */
 .summary-header {
   width: 100%;
@@ -181,9 +191,9 @@
   }
 
   .profil-header>p {
-    color: #29ABE2;
-    font-weight: 700;
+    font-size: 16px;
   }
+
 }
 
 @media(max-width: 950px) {
