--- a/style/board.css
+++ b/style/board.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     max-width: calc(1440px - 232px);
+  animation: blendIn 0.2s ease-in-out;
 }
 
 .board-header {
