Add legal notice and privacy policy for login
Added new legal_notice_from_login.html and privacy_policy_from_login.html pages for access from the login screen. Updated index.html footer links to point to these new pages. Added login.svg icon and updated help.css for styling.

--- a/style/help.css
+++ b/style/help.css
@@ -91,3 +91,18 @@
 p .highlight-join {
   color: #29abe2;
 }
+
+.j_c_start
+{
+  justify-content: flex-start;
+}
+
+.h_96{
+  height: 96px;
+}
+
+.flex_center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
