--- a/style/add_task_overlay.css
+++ b/style/add_task_overlay.css
@@ -7,7 +7,7 @@
     height: 100vh;
 }
 
-.add-tasl-overlay-board {
+.add-task-overlay-board {
     position: relative;
     width: 100%;
     height: 100%;
