--- a/style/standart.css
+++ b/style/standart.css
@@ -20,8 +20,6 @@
   font-family: 'Inter';
 }
 
-
-
 :root {
   --summary-color: #F6F7F8;
   --header-color: #FFFFFF;
@@ -93,6 +91,15 @@ main {
   width: 100%;
   flex-direction: column;
   min-height: 100vh;
+}
+
+input{
+  background-color: inherit;
+  color: inherit;
+}
+
+button{
+  color: inherit;
 }
 
 .d_none {
