HEader is fixed now in add task overlay for board

--- a/style/overlay_board_template.css
+++ b/style/overlay_board_template.css
@@ -6,7 +6,6 @@
     background-color: #FFFFFF;
     display: flex;
     flex-direction: column;
-    overflow: auto;
     padding: 48px;
 }
 
@@ -15,6 +14,8 @@
     flex-direction: column;
     justify-content: space-between;
     min-height: 550px;
+    max-height: 550px;
+    overflow: auto;
 }
 
 .add-task-header {
