resp search button in board is visible now

--- a/style/board_resp.css
+++ b/style/board_resp.css
@@ -71,7 +71,7 @@
         margin-bottom: 20px;
     }
 
-    .board-actions button {
+    .board-actions > button {
         display: none;
     }
 
