--- a/style/board_resp.css
+++ b/style/board_resp.css
@@ -28,7 +28,7 @@
 @media (max-width: 950px) {
 
     .board-header {
-        padding: 60px 20px 40px 20px;
+        padding: 24px 20px;
     }
 
     .kanban-board {
@@ -154,9 +154,15 @@
     }
 }
 
+@media (max-width: 850px) {
+    .board-page{
+        margin-top: 80px;
+    }
+}
+
 @media (max-width: 500px) {
     .board-header {
-        padding: 32px 8px 20px 8px;
+        padding: 20px 8px;
     }
 
     .kanban-board {
